# MyCogni

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  SUPPORTED_BROKERS.md  alembic.ini  build-constraints.txt  docker-bake.hcl  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: architecture-decision.yml  bug.yml  config.yml  connector-change.yml  feature.yml
.github/workflows/: ci.yml  pages.yml
broker-registry/: schema.json
broker-registry/examples/: synthetic-people-search.json
browser-spike/: THIRD_PARTY.md  package-lock.json  package.json  run.mjs  synthetic.html
ci/: architecture-claims.json  network-loopback-authority.json
deploy/: README.md  compose.browser-smoke.yml  compose.container-smoke.yml  compose.runner-mailbox-smoke.yml
docker/: Dockerfile  Dockerfile.browser  Dockerfile.runner-mailbox  README.md  images.lock.json  seccomp.browser.json
docs/: 00-product-brief.md  01-research-synthesis.md  02-requirements.md  03-system-architecture.md  04-data-model-and-lifecycle.md  05-security-privacy-threat-model.md  06-connector-sdk.md  07-deployment-architecture.md  08-observability-and-operations.md  09-testing-and-quality.md  10-execution-plan.md  11-adversarial-review.md  12-decisions-and-interview.md  13-inception-completion-audit.md  14-principal-team-synthesis.md  15-product-market-fit.md  16-local-intelligence-architecture.md
docs/adr/: 0001-modular-monolith-and-durable-db-queue.md  0002-local-custody-and-envelope-encryption.md  0003-capability-scoped-connector-sandbox.md  0004-evidence-based-outcome-semantics.md  0005-license-and-project-identity.md  0006-automatic-trusted-external-actions.md  README.md  (+9 more)
governance/: README.md  acceptance.schema.json  acceptance.v1.json  package-status.schema.json  package-status.v1.json  review-attestations.schema.json  review-attestations.v1.json  traceability.schema.json  traceability.v1.json
migrations/: README.md  env.py
scripts/: verify_browser_containment.py  verify_browser_containment_runtime.py  verify_container_skeleton.py  verify_runner_containment.py  verify_runner_containment_runtime.py
security/: README.md  id-history.schema.json  id-history.v1.json  threat-catalog.schema.json  threat-catalog.v1.json  verification-tests.schema.json  verification-tests.v1.json
services/: __init__.py
simulator/: README.md  __init__.py  clock.py  corpus.py  engine.py  mail.py  protocol.py  safety.py  web.py
site/: ASSET_PROVENANCE.md  README.md  app.js  index.html  styles.css
tests/: conftest.py
(+218 files in other folders)
