[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mycogni"
version = "0.0.0"
description = "Local-first, proof-first personal-data removal"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
authors = [{ name = "MyCogni contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "alembic>=1.14,<2",
  "cryptography>=44,<47",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.10,<3",
  "sqlalchemy>=2.0,<3",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "hypothesis>=6.120,<7",
  "import-linter>=2.2,<3",
  "mypy>=1.14,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mycogni"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "-ra"]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["mycogni"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "C4", "E4", "E7", "E9", "F", "I", "SIM", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["mycogni", "connector_protocol"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
packages = ["mycogni"]

[tool.importlinter]
root_packages = ["mycogni"]

[[tool.importlinter.contracts]]
name = "Domain is independent"
type = "forbidden"
source_modules = ["mycogni.domain"]
forbidden_modules = [
  "mycogni.application",
  "mycogni.adapters",
  "mycogni.bootstrap",
  "mycogni.entrypoints",
]

[[tool.importlinter.contracts]]
name = "Application does not import concrete adapters"
type = "forbidden"
source_modules = ["mycogni.application"]
forbidden_modules = ["mycogni.adapters", "mycogni.bootstrap", "mycogni.entrypoints"]

[[tool.importlinter.contracts]]
name = "Adapters do not depend on delivery or composition"
type = "forbidden"
source_modules = ["mycogni.adapters"]
forbidden_modules = ["mycogni.bootstrap", "mycogni.entrypoints"]

[[tool.importlinter.contracts]]
name = "Entrypoints do not access concrete adapters"
type = "forbidden"
source_modules = ["mycogni.entrypoints"]
forbidden_modules = ["mycogni.adapters", "mycogni.bootstrap"]
